[gd_scene load_steps=10 format=2]

[ext_resource path="res://Levels/LevelEndScreen.gd" type="Script" id=1]
[ext_resource path="res://Assets/ScreenOverlay.png" type="Texture" id=2]
[ext_resource path="res://Assets/ArchitectsDaughter.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/UIfruit.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]

size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]

size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]

size = 128
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]

size = 47
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]

size = 47
font_data = ExtResource( 3 )

[node name="LevelEndScreen" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Layer1" type="Sprite" parent="."]
position = Vector2( 511.069, 296.718 )
scale = Vector2( 0.500909, 0.500909 )
texture = ExtResource( 2 )

[node name="Layer2" type="Sprite" parent="Layer1"]
self_modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 1, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="Layer1/Layer2"]
margin_left = -324.0
margin_top = -479.0
margin_right = 314.0
margin_bottom = -352.0
custom_fonts/normal_font = SubResource( 1 )
text = "Level Complete!"
scroll_active = false

[node name="RichTextLabel2" type="RichTextLabel" parent="Layer1/Layer2"]
margin_left = -134.991
margin_top = -342.877
margin_right = 66.0093
margin_bottom = -295.877
custom_fonts/normal_font = SubResource( 2 )
text = "Statistics"
scroll_active = false

[node name="RichTextLabel3" type="RichTextLabel" parent="Layer1/Layer2"]
margin_left = -608.232
margin_top = -224.797
margin_right = -333.232
margin_bottom = -177.797
custom_fonts/normal_font = SubResource( 2 )
text = "Health Bonus:"
scroll_active = false

[node name="RichTextLabel4" type="RichTextLabel" parent="Layer1/Layer2"]
margin_left = 267.738
margin_top = -224.797
margin_right = 542.738
margin_bottom = -177.797
custom_fonts/normal_font = SubResource( 2 )
text = "Time Bonus:"
scroll_active = false

[node name="TimeBonus" type="RichTextLabel" parent="Layer1/Layer2"]
margin_left = 268.0
margin_top = -167.0
margin_right = 525.0
margin_bottom = -120.0
custom_fonts/normal_font = SubResource( 2 )
text = "00:00:00"
scroll_active = false

[node name="Health1" type="Sprite" parent="Layer1/Layer2"]
position = Vector2( -551.484, -108.002 )
scale = Vector2( 0.205182, 0.205182 )
texture = ExtResource( 4 )

[node name="Health2" type="Sprite" parent="Layer1/Layer2"]
position = Vector2( -447.493, -108.002 )
scale = Vector2( 0.205182, 0.205182 )
texture = ExtResource( 4 )

[node name="RankLabel" type="RichTextLabel" parent="Layer1/Layer2"]
margin_left = -128.883
margin_top = 48.1535
margin_right = 91.1165
margin_bottom = 175.154
custom_fonts/normal_font = SubResource( 1 )
text = "Rank:"
scroll_active = false

[node name="Rank" type="RichTextLabel" parent="Layer1/Layer2"]
margin_left = -82.8397
margin_top = 142.94
margin_right = 51.1603
margin_bottom = 327.94
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0.12549, 1, 0, 1 )
text = "A"
scroll_active = false

[node name="NextLevelButton" type="Button" parent="Layer1/Layer2"]
margin_left = 346.225
margin_top = 359.347
margin_right = 708.225
margin_bottom = 493.347
custom_fonts/font = SubResource( 5 )
text = "Next Level"

[node name="MainMenuButton" type="Button" parent="Layer1/Layer2"]
margin_left = -729.773
margin_top = 359.347
margin_right = -367.773
margin_bottom = 493.347
custom_fonts/font = SubResource( 4 )
text = "Main Menu"

[connection signal="pressed" from="Layer1/Layer2/NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
[connection signal="pressed" from="Layer1/Layer2/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
